refactor: osiv로 인한 service layer return value 변경